--- a/package.json
+++ b/package.json
@@ -21,5 +21,16 @@
     "meow": "^3.4.2",
     "ncp": "^2.0.0",
     "node-static": "^0.7.7"
+  },
+  "scripts": {
+    "test": "xo"
+  },
+  "xo": {
+    "space": true,
+    "envs": ["browser", "jquery"],
+    "globals": ["Handlebars", "hljs", "loadJS", "loadCSS"]
+  },
+  "devDependencies": {
+    "xo": "^0.9.0"
   }
 }
