--- a/package.json
+++ b/package.json
@@ -27,10 +27,23 @@
   },
   "xo": {
     "space": true,
-    "envs": ["browser", "jquery"],
-    "globals": ["Clipboard", "hljs"]
+    "envs": [
+      "browser",
+      "jquery"
+    ],
+    "globals": [
+      "Clipboard",
+      "hljs"
+    ],
+    "ignore":[
+      "toth/"
+    ]
   },
   "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-more-css": "^1.0.0",
+    "gulp-uglify": "^1.5.1",
     "xo": "^0.9.0"
   }
 }
