--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "doki": "^0.1.1",
+    "lodash.kebabcase": "^4.0.0",
     "meow": "^3.4.2",
     "ncp": "^2.0.0",
     "node-static": "^0.7.7"
