--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "doki": "^1.1.2",
+    "glob-watcher": "^2.0.0",
     "lodash.kebabcase": "^4.0.0",
     "meow": "^3.4.2",
     "ncp": "^2.0.0",
