--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "abbrev": "^1.0.7",
     "chalk": "^1.1.1",
     "doki": "^1.1.2",
+    "figures": "^1.5.0",
     "glob-watcher": "^2.0.0",
     "lodash.kebabcase": "^4.0.0",
     "meow": "^3.4.2",
