Uses ecstatic instead of node-static

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toth",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "description": "Styleguide generator that just works.",
   "license": "MIT",
   "repository": "filipelinhares/toth",
@@ -20,8 +20,10 @@
     "chalk": "^1.1.1",
     "consolidate": "^0.14.0",
     "doki": "^1.1.2",
+    "ecstatic": "^1.4.0",
     "figures": "^1.5.0",
     "glob-watcher": "^2.0.0",
+    "handlebars": "^4.0.5",
     "lodash.kebabcase": "^4.0.0",
     "meow": "^3.4.2",
     "ncp": "^2.0.0",
